Update to CMakeLists.txt for latest Stitched

--- a/DataFormats/Common/CMakeLists.txt
+++ b/DataFormats/Common/CMakeLists.txt
@@ -1,53 +1,74 @@
-include_directories(${CMAKE_SOURCE_DIR})
-include_directories(/usr/include/)
 if(BUILDTEST)
 add_subdirectory(test)
 endif()
-reflex_dictionary(DataFormatsCommon src/classes.h src/classes_def.xml)
 add_library(DataFormatsCommon SHARED 
-  src/traits.cc
-  src/RefCoreStreamer.cc
-  src/PtrVectorBase.cc
-  src/ThinnedAssociation.cc
-  src/HandleExceptionFactory.cc
-  src/ConvertHandle.cc
-  src/ProductData.cc
-  src/WrapperBase.cc
-  src/EDProductGetter.cc
-  src/RefCore.cc
-  src/OrphanHandleBase.cc
-  src/DetSetVectorNew.cc
-  src/DataFrameContainer.cc
-  src/MultiAssociation.cc
   src/CommonExceptions.cc
-  src/RefCoreWithIndex.cc
+  src/ConvertHandle.cc
+  src/DataFrameContainer.cc
+  src/DetSetVectorNew.cc
+  src/EDProductGetter.cc
   src/HandleBase.cc
+  src/HandleExceptionFactory.cc
   src/MergeableCounter.cc
+  src/MultiAssociation.cc
+  src/OrphanHandleBase.cc
+  src/ProductData.cc
+  src/PtrVectorBase.cc
+  src/RefCore.cc
+  src/RefCoreStreamer.cc
+  src/RefCoreWithIndex.cc
+  src/ThinnedAssociation.cc
+  src/ValidHandle.cc
   src/View.cc
-  DataFormatsCommonDict.cpp
+  src/WrapperBase.cc
+  src/setIsMergeable.cc
+  src/traits.cc
 )
 
-add_dependencies(DataFormatsCommon DataFormatsCommonDict)
-target_include_directories(DataFormatsCommon PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(DataFormatsCommon PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(DataFormatsCommon PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(DataFormatsCommon PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(DataFormatsCommon PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(DataFormatsCommon PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${MD5_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
 target_link_libraries(DataFormatsCommon PUBLIC
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  dl
-  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  FWCoreMessageLogger
-  ${PYTHON_LIBRARY}
-  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
-  FWCoreUtilities
-  ${Boost_THREAD_LIBRARY_RELEASE}
-  ${Boost_SYSTEM_LIBRARY_RELEASE}
-  DataFormatsStdDictionaries
   ${Boost_FILESYSTEM_LIBRARY_RELEASE}
+  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
+  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
   ${Boost_PYTHON_LIBRARY_RELEASE}
+  ${Boost_REGEX_LIBRARY_RELEASE}
+  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
+  ${Boost_SYSTEM_LIBRARY_RELEASE}
+  ${Boost_THREAD_LIBRARY_RELEASE}
+  ${PYTHON_LIBRARY}
+  Core
   DataFormatsProvenance
+  DataFormatsStdDictionaries
+  FWCoreMessageLogger
+  FWCoreUtilities
+  MathCore
+  Net
+  RIO
+  Thread
+  Tree
+  dl
 )
 
-install( TARGETS DataFormatsCommon EXPORT DataFormatsCommon DESTINATION  lib )
+install( TARGETS DataFormatsCommon DESTINATION  lib  EXPORT stitched::DataFormatsCommon)
 
+include_directories(${CMAKE_SOURCE_DIR})
+include_directories(/usr/include/)
+include_directories(${Boost_INCLUDE_DIR})
+include_directories(${MD5_INCLUDE_DIR})
+include_directories(${ROOT_INCLUDE_DIR})
+include_directories(${TBB_INCLUDE_DIRS})
+include_directories(${TINYXML2_INCLUDE_DIR})
+include_directories(${UUID_INCLUDE_DIR})
+reflex_generate_dictionary(DataFormatsCommon src/classes.h src/classes_def.xml ROOTMAPLIB DataFormatsCommonDict)
+add_library(DataFormatsCommonDict SHARED DataFormatsCommonDict.cpp)
+add_dependencies(DataFormatsCommon DataFormatsCommonGen)
+install( TARGETS DataFormatsCommonDict DESTINATION lib EXPORT stitched::DataFormatsCommonDict )
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/DataFormatsCommonDict_rdict.pcm  ${CMAKE_CURRENT_BINARY_DIR}/DataFormatsCommon.rootmap DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
