--- a/DataFormats/FEDRawData/CMakeLists.txt
+++ b/DataFormats/FEDRawData/CMakeLists.txt
@@ -1,31 +1,40 @@
-include_directories(${CMAKE_SOURCE_DIR})
-include_directories(/usr/include/)
 if(BUILDTEST)
 add_subdirectory(test)
 endif()
-reflex_dictionary(DataFormatsFEDRawData src/classes.h src/classes_def.xml)
 add_library(DataFormatsFEDRawData SHARED 
   src/FEDHeader.cc
+  src/FEDNumbering.cc
   src/FEDRawData.cc
   src/FEDRawDataCollection.cc
-  src/FEDNumbering.cc
   src/FEDTrailer.cc
-  DataFormatsFEDRawDataDict.cpp
 )
 
-add_dependencies(DataFormatsFEDRawData DataFormatsFEDRawDataDict)
-target_include_directories(DataFormatsFEDRawData PUBLIC ${MD5_INCLUDE_DIR})
-include_directories(DataFormatsFEDRawData PUBLIC ${MD5_INCLUDE_DIR})
-target_include_directories(DataFormatsFEDRawData PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(DataFormatsFEDRawData PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(DataFormatsFEDRawData PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(DataFormatsFEDRawData PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(DataFormatsFEDRawData PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(DataFormatsFEDRawData PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(DataFormatsFEDRawData PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(DataFormatsFEDRawData PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${MD5_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
 target_link_libraries(DataFormatsFEDRawData PUBLIC
   DataFormatsCommon
   FWCoreUtilities
 )
 
-install( TARGETS DataFormatsFEDRawData EXPORT DataFormatsFEDRawData DESTINATION  lib )
+install( TARGETS DataFormatsFEDRawData DESTINATION  lib  EXPORT stitched::DataFormatsFEDRawData)
 
+include_directories(${CMAKE_SOURCE_DIR})
+include_directories(/usr/include/)
+include_directories(${Boost_INCLUDE_DIR})
+include_directories(${MD5_INCLUDE_DIR})
+include_directories(${ROOT_INCLUDE_DIR})
+include_directories(${TBB_INCLUDE_DIRS})
+include_directories(${TINYXML2_INCLUDE_DIR})
+include_directories(${UUID_INCLUDE_DIR})
+reflex_generate_dictionary(DataFormatsFEDRawData src/classes.h src/classes_def.xml ROOTMAPLIB DataFormatsFEDRawDataDict)
+add_library(DataFormatsFEDRawDataDict SHARED DataFormatsFEDRawDataDict.cpp)
+add_dependencies(DataFormatsFEDRawData DataFormatsFEDRawDataGen)
+install( TARGETS DataFormatsFEDRawDataDict DESTINATION lib EXPORT stitched::DataFormatsFEDRawDataDict )
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/DataFormatsFEDRawDataDict_rdict.pcm  ${CMAKE_CURRENT_BINARY_DIR}/DataFormatsFEDRawData.rootmap DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
