--- a/DataFormats/FWLite/test/CMakeLists.txt
+++ b/DataFormats/FWLite/test/CMakeLists.txt
@@ -2,29 +2,45 @@ add_executable(testDataFormatsFWLiteMakeInput
   TestRunnerDataFormatsFWLite.cpp
 )
 
-target_include_directories(testDataFormatsFWLiteMakeInput PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(testDataFormatsFWLiteMakeInput PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(testDataFormatsFWLiteMakeInput PUBLIC ${MD5_INCLUDE_DIR})
-include_directories(testDataFormatsFWLiteMakeInput PUBLIC ${MD5_INCLUDE_DIR})
-target_include_directories(testDataFormatsFWLiteMakeInput PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(testDataFormatsFWLiteMakeInput PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(testDataFormatsFWLiteMakeInput PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(testDataFormatsFWLiteMakeInput PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(testDataFormatsFWLiteMakeInput PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(testDataFormatsFWLiteMakeInput PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${CPPUNIT_INCLUDE_DIR}
+ ${MD5_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
 target_link_libraries(testDataFormatsFWLiteMakeInput PUBLIC
+  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
+  ${Boost_SYSTEM_LIBRARY_RELEASE}
+  ${CPPUNIT_LIBRARY}
   DataFormatsFWLite
   FWCoreUtilities
 )
 
 add_test(NAME testDataFormatsFWLiteMakeInput COMMAND testDataFormatsFWLiteMakeInput)
 add_executable(testDataFormatsFWLite
-  test.cppunit.cpp
   format_type_name.cppunit.cpp
+  test.cppunit.cpp
 )
 
+target_include_directories(testDataFormatsFWLite PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(testDataFormatsFWLite PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${CPPUNIT_INCLUDE_DIR}
+ ${MD5_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
 target_link_libraries(testDataFormatsFWLite PUBLIC
+  ${CPPUNIT_LIBRARY}
   DataFormatsFWLite
-  FWCoreFWLite
   DataFormatsTestObjects
+  FWCoreFWLite
 )
 
 add_test(NAME testDataFormatsFWLite COMMAND testDataFormatsFWLite)
@@ -32,15 +48,18 @@ add_executable(TestRunnerDataFormatsFWLite
   TestRunnerDataFormatsFWLite.cpp
 )
 
-target_include_directories(TestRunnerDataFormatsFWLite PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(TestRunnerDataFormatsFWLite PUBLIC ${ROOT_INCLUDE_DIR})
-target_include_directories(TestRunnerDataFormatsFWLite PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(TestRunnerDataFormatsFWLite PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(TestRunnerDataFormatsFWLite PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(TestRunnerDataFormatsFWLite PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(TestRunnerDataFormatsFWLite PUBLIC ${MD5_INCLUDE_DIR})
-include_directories(TestRunnerDataFormatsFWLite PUBLIC ${MD5_INCLUDE_DIR})
+target_include_directories(TestRunnerDataFormatsFWLite PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(TestRunnerDataFormatsFWLite PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${CPPUNIT_INCLUDE_DIR}
+ ${MD5_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
 target_link_libraries(TestRunnerDataFormatsFWLite PUBLIC
+  ${CPPUNIT_LIBRARY}
   DataFormatsFWLite
   FWCoreUtilities
 )
