--- a/FWCore/Concurrency/test/CMakeLists.txt
+++ b/FWCore/Concurrency/test/CMakeLists.txt
@@ -1,16 +1,19 @@
 add_executable(testFWCoreConcurrency
+  limitedtaskqueue_t.cppunit.cpp
   serialtaskqueue_t.cppunit.cpp
   serialtaskqueuechain_t.cppunit.cpp
   waitingtasklist_t.cppunit.cpp
 )
 
-target_include_directories(testFWCoreConcurrency PUBLIC ${CPPUNIT_INCLUDE_DIR})
-include_directories(testFWCoreConcurrency PUBLIC ${CPPUNIT_INCLUDE_DIR})
-target_include_directories(testFWCoreConcurrency PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(testFWCoreConcurrency PUBLIC ${TBB_INCLUDE_DIRS})
+target_include_directories(testFWCoreConcurrency PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(testFWCoreConcurrency PUBLIC
+ ${CPPUNIT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${XERCESC_INCLUDE_DIR}
+)
 target_link_libraries(testFWCoreConcurrency PUBLIC
-  FWCoreConcurrency
   ${CPPUNIT_LIBRARY}
+  FWCoreConcurrency
 )
 
 add_test(NAME testFWCoreConcurrency COMMAND testFWCoreConcurrency)
@@ -18,33 +21,75 @@ add_executable(test_xercesInitialize
   test_xercesInitialize.cpp
 )
 
-target_include_directories(test_xercesInitialize PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(test_xercesInitialize PUBLIC ${TBB_INCLUDE_DIRS})
+target_include_directories(test_xercesInitialize PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(test_xercesInitialize PUBLIC
+ ${TBB_INCLUDE_DIRS}
+ ${XERCESC_INCLUDE_DIR}
+)
 target_link_libraries(test_xercesInitialize PUBLIC
   FWCoreConcurrency
 )
 
 add_test(NAME test_xercesInitialize COMMAND test_xercesInitialize)
+add_executable(test_threadSafeOutputFileStream
+  test_threadSafeOutputFileStream.cpp
+)
+
+target_include_directories(test_threadSafeOutputFileStream PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(test_threadSafeOutputFileStream PUBLIC
+ ${TBB_INCLUDE_DIRS}
+ ${XERCESC_INCLUDE_DIR}
+)
+target_link_libraries(test_threadSafeOutputFileStream PUBLIC
+  FWCoreConcurrency
+)
+
+add_test(NAME test_threadSafeOutputFileStream COMMAND test_threadSafeOutputFileStream)
 add_executable(ThreadSafeAddOnlyContainer_t
   ThreadSafeAddOnlyContainer_t.cpp
 )
 
-target_include_directories(ThreadSafeAddOnlyContainer_t PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(ThreadSafeAddOnlyContainer_t PUBLIC ${TBB_INCLUDE_DIRS})
+target_include_directories(ThreadSafeAddOnlyContainer_t PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(ThreadSafeAddOnlyContainer_t PUBLIC
+ ${TBB_INCLUDE_DIRS}
+ ${XERCESC_INCLUDE_DIR}
+)
 target_link_libraries(ThreadSafeAddOnlyContainer_t PUBLIC
   FWCoreConcurrency
 )
 
 add_test(NAME ThreadSafeAddOnlyContainer_t COMMAND ThreadSafeAddOnlyContainer_t)
-add_executable(runStreamGrapherTest
-  runStreamGrapherTest.cpp
+add_executable(TestFWCoreConcurrencyDriver
+  TestFWCoreConcurrencyDriver.cpp
 )
 
-target_include_directories(runStreamGrapherTest PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(runStreamGrapherTest PUBLIC ${TBB_INCLUDE_DIRS})
-target_link_libraries(runStreamGrapherTest PUBLIC
+target_include_directories(TestFWCoreConcurrencyDriver PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(TestFWCoreConcurrencyDriver PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${MD5_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${UUID_INCLUDE_DIR}
+ ${XERCESC_INCLUDE_DIR}
+)
+target_link_libraries(TestFWCoreConcurrencyDriver PUBLIC
   FWCoreConcurrency
   FWCoreUtilities
 )
 
-add_test(NAME runStreamGrapherTest COMMAND runStreamGrapherTest)
+add_test(NAME TestFWCoreConcurrencyDriver COMMAND TestFWCoreConcurrencyDriver)
+add_executable(testFWCoreConcurrencyTBB.cc
+  TestTBB.cc
+)
+
+target_include_directories(testFWCoreConcurrencyTBB.cc PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(testFWCoreConcurrencyTBB.cc PUBLIC
+ ${TBB_INCLUDE_DIRS}
+ ${XERCESC_INCLUDE_DIR}
+)
+target_link_libraries(testFWCoreConcurrencyTBB.cc PUBLIC
+  ${TBB_LIBRARIES}
+  FWCoreConcurrency
+)
+
+add_test(NAME testFWCoreConcurrencyTBB.cc COMMAND testFWCoreConcurrencyTBB.cc)
