--- a/FWCore/MessageService/CMakeLists.txt
+++ b/FWCore/MessageService/CMakeLists.txt
@@ -1,61 +1,55 @@
-include_directories(${CMAKE_SOURCE_DIR})
-include_directories(/usr/include/)
 add_subdirectory(bin)
 if(BUILDTEST)
 add_subdirectory(test)
 endif()
 add_subdirectory(plugins)
 add_library(FWCoreMessageService SHARED 
+  src/ELadministrator.cc
   src/ELdestination.cc
   src/ELlimitsTable.cc
-  src/ELdestControl.cc
-  src/SingleThreadMSPresence.cc
-  src/ELadministrator.cc
-  src/MessageLoggerDefaults.cc
-  src/HardwiredDefaults.cc
-  src/ELstatistics.cc
-  src/ThreadQueue.cc
-  src/MessageServicePresence.cc
   src/ELoutput.cc
-  src/ThreadSafeLogMessageLoggerScribe.cc
-  src/MessageLoggerScribe.cc
-  src/MessageLogger.cc
+  src/ELstatistics.cc
+  src/HardwiredDefaults.cc
   src/MainThreadMLscribe.cc
+  src/MessageLogger.cc
+  src/MessageLoggerDefaults.cc
+  src/MessageLoggerScribe.cc
   src/MessageServicePSetValidation.cc
+  src/MessageServicePresence.cc
+  src/SingleThreadMSPresence.cc
+  src/ThreadQueue.cc
+  src/ThreadSafeLogMessageLoggerScribe.cc
 )
 
-target_include_directories(FWCoreMessageService PUBLIC ${PYTHON_INCLUDE_DIR})
-include_directories(FWCoreMessageService PUBLIC ${PYTHON_INCLUDE_DIR})
-target_include_directories(FWCoreMessageService PUBLIC ${MD5_INCLUDE_DIR})
-include_directories(FWCoreMessageService PUBLIC ${MD5_INCLUDE_DIR})
-target_include_directories(FWCoreMessageService PUBLIC ${Boost_INCLUDE_DIR}/python)
-include_directories(FWCoreMessageService PUBLIC ${Boost_INCLUDE_DIR}/python)
-target_include_directories(FWCoreMessageService PUBLIC ${TINYXML_INCLUDE_DIR})
-include_directories(FWCoreMessageService PUBLIC ${TINYXML_INCLUDE_DIR})
-target_include_directories(FWCoreMessageService PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(FWCoreMessageService PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(FWCoreMessageService PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(FWCoreMessageService PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(FWCoreMessageService PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(FWCoreMessageService PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(FWCoreMessageService PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(FWCoreMessageService PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
 target_link_libraries(FWCoreMessageService PUBLIC
-  FWCoreParameterSet
-  dl
+  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
   ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  FWCoreUtilities
-  FWCoreMessageLogger
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
   ${Boost_PYTHON_LIBRARY_RELEASE}
-  ${Boost_THREAD_LIBRARY_RELEASE}
+  ${Boost_REGEX_LIBRARY_RELEASE}
+  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
   ${Boost_SYSTEM_LIBRARY_RELEASE}
-  FWCoreServiceRegistry
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  ${TBB_LIBRARIES}
+  ${Boost_THREAD_LIBRARY_RELEASE}
   ${PYTHON_LIBRARY}
+  ${TBB_LIBRARIES}
   DataFormatsProvenance
+  FWCoreMessageLogger
+  FWCoreParameterSet
+  FWCoreServiceRegistry
+  FWCoreUtilities
+  dl
 )
 
-install( TARGETS FWCoreMessageService EXPORT FWCoreMessageService DESTINATION  lib )
+install( TARGETS FWCoreMessageService DESTINATION  lib  EXPORT stitched::FWCoreMessageService)
 
