--- a/FWCore/Modules/CMakeLists.txt
+++ b/FWCore/Modules/CMakeLists.txt
@@ -1,46 +1,63 @@
-include_directories(${CMAKE_SOURCE_DIR})
-include_directories(/usr/include/)
 add_library(FWCoreModules SHARED 
-  src/LogErrorFilter.cc
-  src/EventSetupCacheIdentifierChecker.cc
-  src/AsciiOutputModule.cc
-  src/EventIDChecker.cc
-  src/Prescaler.cc
   src/AbortOnEventIDAnalyzer.cc
-  src/ProvenanceCheckerOutputModule.cc
-  src/IterateNTimesLooper.cc
-  src/PrintEventSetupContent.cc
+  src/AsciiOutputModule.cc
+  src/BunchCrossingFilter.cc
   src/EmptyESSource.cc
-  src/GetProductCheckerOutputModule.cc
   src/EmptySource.cc
-  src/LogErrorHarvester.cc
-  src/EventSetupRecordDataGetter.cc
-  src/NavigateEventsLooper.cc
-  src/EventContentAnalyzer.cc
-  src/PrintEventSetupDataRetrieval.cc
   src/EventAuxiliaryHistoryProducer.cc
-  src/MulticoreRunLumiEventChecker.cc
+  src/EventContentAnalyzer.cc
+  src/EventIDChecker.cc
+  src/EventSetupCacheIdentifierChecker.cc
+  src/EventSetupRecordDataGetter.cc
+  src/GetProductCheckerOutputModule.cc
+  src/IterateNTimesLooper.cc
+  src/LogErrorFilter.cc
+  src/LogErrorHarvester.cc
+  src/ModuloEventIDFilter.cc
+  src/ModuloStreamIDFilter.cc
+  src/NavigateEventsLooper.cc
+  src/PathStatusFilter.cc
+  src/Prescaler.cc
+  src/PrintEventSetupContent.cc
+  src/PrintEventSetupDataRetrieval.cc
+  src/ProvenanceCheckerOutputModule.cc
+  src/RunLumiEventChecker.cc
+  src/SwitchProducer.cc
+  src/TestSource.cc
+  src/TimeStudyModules.cc
 )
 
-target_include_directories(FWCoreModules PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(FWCoreModules PUBLIC ${Boost_INCLUDE_DIR})
+target_include_directories(FWCoreModules PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(FWCoreModules PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+ ${XERCESC_INCLUDE_DIR}
+)
 target_link_libraries(FWCoreModules PUBLIC
-  FWCoreParameterSet
-  dl
+  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
   ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  FWCoreMessageLogger
-  FWCoreFramework
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
   ${Boost_PYTHON_LIBRARY_RELEASE}
-  ${Boost_THREAD_LIBRARY_RELEASE}
+  ${Boost_REGEX_LIBRARY_RELEASE}
+  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
   ${Boost_SYSTEM_LIBRARY_RELEASE}
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
+  ${Boost_THREAD_LIBRARY_RELEASE}
   ${PYTHON_LIBRARY}
+  DataFormatsCommon
   DataFormatsProvenance
+  FWCoreFramework
+  FWCoreMessageLogger
+  FWCoreParameterSet
   FWCoreSources
+  FWCoreUtilities
+  dl
 )
 
-install( TARGETS FWCoreModules EXPORT FWCoreModules DESTINATION  lib )
+install( TARGETS FWCoreModules DESTINATION  lib  EXPORT stitched::FWCoreModules)
 
