--- a/FWCore/PrescaleService/CMakeLists.txt
+++ b/FWCore/PrescaleService/CMakeLists.txt
@@ -1,16 +1,23 @@
-include_directories(${CMAKE_SOURCE_DIR})
-include_directories(/usr/include/)
 add_subdirectory(plugins)
 add_library(FWCorePrescaleService SHARED 
   src/PrescaleService.cc
 )
 
+target_include_directories(FWCorePrescaleService PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(FWCorePrescaleService PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${MD5_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
 target_link_libraries(FWCorePrescaleService PUBLIC
-  FWCoreParameterSet
-  FWCoreMessageLogger
   DataFormatsProvenance
+  FWCoreMessageLogger
+  FWCoreParameterSet
   FWCoreUtilities
 )
 
-install( TARGETS FWCorePrescaleService EXPORT FWCorePrescaleService DESTINATION  lib )
+install( TARGETS FWCorePrescaleService DESTINATION  lib  EXPORT stitched::FWCorePrescaleService)
 
