--- a/FWCore/PythonParameterSet/bin/CMakeLists.txt
+++ b/FWCore/PythonParameterSet/bin/CMakeLists.txt
@@ -2,45 +2,63 @@ add_executable(edmConfigHash
   edmConfigHash.cpp
 )
 
-target_include_directories(edmConfigHash PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(edmConfigHash PUBLIC ${Boost_INCLUDE_DIR})
+target_include_directories(edmConfigHash PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(edmConfigHash PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
 target_link_libraries(edmConfigHash PUBLIC
-  FWCoreParameterSet
-  dl
+  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
   ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  ${Boost_REGEX_LIBRARY_RELEASE}
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
   ${Boost_PYTHON_LIBRARY_RELEASE}
-  ${Boost_THREAD_LIBRARY_RELEASE}
+  ${Boost_REGEX_LIBRARY_RELEASE}
+  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
   ${Boost_SYSTEM_LIBRARY_RELEASE}
-  FWCorePythonParameterSet
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
+  ${Boost_THREAD_LIBRARY_RELEASE}
   ${PYTHON_LIBRARY}
+  FWCoreParameterSet
+  FWCorePythonParameterSet
+  dl
 )
 
-install( TARGETS edmConfigHash EXPORT edmConfigHash DESTINATION  bin )
+install( TARGETS edmConfigHash DESTINATION  bin  EXPORT stitched::edmConfigHash)
 
 add_executable(edmParameterSetDump
   edmParameterSetDump.cpp
 )
 
-target_include_directories(edmParameterSetDump PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(edmParameterSetDump PUBLIC ${Boost_INCLUDE_DIR})
+target_include_directories(edmParameterSetDump PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(edmParameterSetDump PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
 target_link_libraries(edmParameterSetDump PUBLIC
-  FWCoreParameterSet
-  dl
+  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
   ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  ${Boost_REGEX_LIBRARY_RELEASE}
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
   ${Boost_PYTHON_LIBRARY_RELEASE}
-  ${Boost_THREAD_LIBRARY_RELEASE}
+  ${Boost_REGEX_LIBRARY_RELEASE}
+  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
   ${Boost_SYSTEM_LIBRARY_RELEASE}
-  FWCorePythonParameterSet
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
+  ${Boost_THREAD_LIBRARY_RELEASE}
   ${PYTHON_LIBRARY}
+  FWCoreParameterSet
+  FWCorePythonParameterSet
+  dl
 )
 
-install( TARGETS edmParameterSetDump EXPORT edmParameterSetDump DESTINATION  bin )
+install( TARGETS edmParameterSetDump DESTINATION  bin  EXPORT stitched::edmParameterSetDump)
 
