--- a/FWCore/Services/CMakeLists.txt
+++ b/FWCore/Services/CMakeLists.txt
@@ -1,60 +1,56 @@
-include_directories(${CMAKE_SOURCE_DIR})
-include_directories(/usr/include/)
 add_subdirectory(bin)
 if(BUILDTEST)
 add_subdirectory(test)
 endif()
 add_subdirectory(plugins)
 add_library(FWCoreServices SHARED 
-  src/SiteLocalConfigService.cc
   src/JobReportService.cc
+  src/SiteLocalConfigService.cc
 )
 
-target_include_directories(FWCoreServices PUBLIC ${PYTHON_INCLUDE_DIR})
-include_directories(FWCoreServices PUBLIC ${PYTHON_INCLUDE_DIR})
-target_include_directories(FWCoreServices PUBLIC ${Boost_INCLUDE_DIR}/python)
-include_directories(FWCoreServices PUBLIC ${Boost_INCLUDE_DIR}/python)
-target_include_directories(FWCoreServices PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(FWCoreServices PUBLIC ${ROOT_INCLUDE_DIR})
-target_include_directories(FWCoreServices PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(FWCoreServices PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(FWCoreServices PUBLIC ${MD5_INCLUDE_DIR})
-include_directories(FWCoreServices PUBLIC ${MD5_INCLUDE_DIR})
-target_include_directories(FWCoreServices PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(FWCoreServices PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(FWCoreServices PUBLIC ${TINYXML_INCLUDE_DIR})
-include_directories(FWCoreServices PUBLIC ${TINYXML_INCLUDE_DIR})
+target_include_directories(FWCoreServices PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(FWCoreServices PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+ ${XERCESC_INCLUDE_DIR}
+)
 target_link_libraries(FWCoreServices PUBLIC
-  FWCoreParameterSet
-  dl
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  Thread
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  Tree
-  FWCoreMessageLogger
-  FWCoreFramework
-  xerces-c
-  Hist
-  ${Boost_THREAD_LIBRARY_RELEASE}
-  MathCore
-  ${Boost_SYSTEM_LIBRARY_RELEASE}
-  FWCoreServiceRegistry
   ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  Net
-  ${PYTHON_LIBRARY}
-  DataFormatsProvenance
-  Matrix
-  Core
   ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  FWCoreUtilities
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
   ${Boost_PYTHON_LIBRARY_RELEASE}
-  RIO
+  ${Boost_REGEX_LIBRARY_RELEASE}
+  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
+  ${Boost_SYSTEM_LIBRARY_RELEASE}
+  ${Boost_THREAD_LIBRARY_RELEASE}
+  ${PYTHON_LIBRARY}
+  ${XERCESC_LIBRARIES}
+  Core
+  DataFormatsCommon
+  DataFormatsProvenance
   DataFormatsStreamer
   FWCoreConcurrency
+  FWCoreFramework
+  FWCoreMessageLogger
+  FWCoreParameterSet
   FWCorePluginManager
-  DataFormatsCommon
+  FWCoreServiceRegistry
+  FWCoreUtilities
+  Hist
+  MathCore
+  Matrix
+  Net
+  RIO
+  Thread
+  Tree
+  dl
 )
 
-install( TARGETS FWCoreServices EXPORT FWCoreServices DESTINATION  lib )
+install( TARGETS FWCoreServices DESTINATION  lib  EXPORT stitched::FWCoreServices)
 
