--- a/FWCore/TFWLiteSelector/test/CMakeLists.txt
+++ b/FWCore/TFWLiteSelector/test/CMakeLists.txt
@@ -2,10 +2,22 @@ add_executable(TestRunnerFWCoreTFWLiteSelector
   TestRunnerFWCoreTFWLiteSelector.cpp
 )
 
+target_include_directories(TestRunnerFWCoreTFWLiteSelector PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(TestRunnerFWCoreTFWLiteSelector PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+ ${XERCESC_INCLUDE_DIR}
+)
 target_link_libraries(TestRunnerFWCoreTFWLiteSelector PUBLIC
   FWCoreFWLite
-  FWCoreTFWLiteSelectorTest
   FWCoreTFWLiteSelector
+  FWCoreTFWLiteSelectorTest
   FWCoreUtilities
 )
 
