--- a/FWCore/Utilities/CMakeLists.txt
+++ b/FWCore/Utilities/CMakeLists.txt
@@ -1,83 +1,82 @@
-include_directories(${CMAKE_SOURCE_DIR})
-include_directories(/usr/include/)
 add_subdirectory(bin)
 if(BUILDTEST)
 add_subdirectory(test)
 endif()
 add_library(FWCoreUtilities SHARED 
-  src/Digest.cc
-  src/DebugMacros.cc
-  src/CPUServiceBase.cc
-  src/TestHelper.cc
-  src/ESInputTag.cc
-  src/GlobalIdentifier.cc
-  src/TypeWithDict.cc
-  src/resolveSymbolicLinks.cc
-  src/BaseWithDict.cc
-  src/Presence.cc
-  src/RunIndex.cc
-  src/typelookup.cc
-  src/InputTag.cc
-  src/EDMException.cc
-  src/WrappedClassName.cc
-  src/LuminosityBlockIndex.cc
-  src/UnixSignalHandlers.cc
-  src/ReleaseVersion.cc
-  src/ExceptionPropagate.cc
-  src/Guid.cc
-  src/RandomNumberGenerator.cc
-  src/ConvertException.cc
-  src/WallclockTimer.cc
-  src/CPUTimer.cc
-  src/TypeDemangler.cc
-  src/FunctionWithDict.cc
-  src/MemberWithDict.cc
-  src/DictionaryTools.cc
-  src/IterWithDict.cc
-  src/CRC32Calculator.cc
-  src/RegexMatch.cc
-  src/TypeID.cc
   src/Adler32Calculator.cc
-  src/MallocOpts.cc
+  src/BaseWithDict.cc
+  src/CPUServiceBase.cc
+  src/CPUTimer.cc
+  src/CRC32Calculator.cc
+  src/ConvertException.cc
+  src/DebugMacros.cc
+  src/DictionaryTools.cc
+  src/Digest.cc
+  src/EDMException.cc
+  src/ESInputTag.cc
   src/Exception.cc
-  src/SingleConsumerQ.cc
   src/ExceptionCollector.cc
-  src/ObjectWithDict.cc
-  src/TimingServiceBase.cc
-  src/Parse.cc
+  src/ExceptionPropagate.cc
   src/FriendlyName.cc
+  src/FunctionWithDict.cc
+  src/GlobalIdentifier.cc
+  src/Guid.cc
+  src/InputTag.cc
+  src/IterWithDict.cc
+  src/LuminosityBlockIndex.cc
+  src/MallocOpts.cc
+  src/MemberWithDict.cc
+  src/OStreamColumn.cc
+  src/ObjectWithDict.cc
+  src/Parse.cc
+  src/Presence.cc
+  src/RandomNumberGenerator.cc
+  src/RegexMatch.cc
+  src/ReleaseVersion.cc
+  src/RunIndex.cc
+  src/SingleConsumerQ.cc
+  src/TestHelper.cc
   src/TimeOfDay.cc
+  src/TimingServiceBase.cc
+  src/TypeDemangler.cc
+  src/TypeID.cc
+  src/TypeWithDict.cc
+  src/UnixSignalHandlers.cc
+  src/WallclockTimer.cc
+  src/WrappedClassName.cc
+  src/resolveSymbolicLinks.cc
+  src/typelookup.cc
 )
 
-target_include_directories(FWCoreUtilities PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(FWCoreUtilities PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(FWCoreUtilities PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(FWCoreUtilities PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(FWCoreUtilities PUBLIC ${MD5_INCLUDE_DIR})
-include_directories(FWCoreUtilities PUBLIC ${MD5_INCLUDE_DIR})
-target_include_directories(FWCoreUtilities PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(FWCoreUtilities PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(FWCoreUtilities PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(FWCoreUtilities PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${MD5_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${UUID_INCLUDE_DIR}
+)
 target_link_libraries(FWCoreUtilities PUBLIC
-  RIO
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  dl
-  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
   ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  Thread
-  Core
-  Tree
-  ${MD5_LIBRARY}
+  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
   ${Boost_PYTHON_LIBRARY_RELEASE}
-  ${Boost_THREAD_LIBRARY_RELEASE}
-  MathCore
-  ${Boost_SYSTEM_LIBRARY_RELEASE}
+  ${Boost_REGEX_LIBRARY_RELEASE}
   ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  Net
+  ${Boost_SYSTEM_LIBRARY_RELEASE}
+  ${Boost_THREAD_LIBRARY_RELEASE}
+  ${MD5_LIBRARY}
   ${PYTHON_LIBRARY}
   ${TBB_LIBRARIES}
-  uuid
+  ${UUID_LIBRARIES}
+  Core
+  MathCore
+  Net
+  RIO
+  Thread
+  Tree
+  dl
 )
 
-install( TARGETS FWCoreUtilities EXPORT FWCoreUtilities DESTINATION  lib )
+install( TARGETS FWCoreUtilities DESTINATION  lib  EXPORT stitched::FWCoreUtilities)
 
