--- a/IOMC/RandomEngine/CMakeLists.txt
+++ b/IOMC/RandomEngine/CMakeLists.txt
@@ -1,51 +1,47 @@
-include_directories(${CMAKE_SOURCE_DIR})
-include_directories(/usr/include/)
 if(BUILDTEST)
 add_subdirectory(test)
 endif()
 add_subdirectory(plugins)
 add_library(IOMCRandomEngine SHARED 
+  src/RandomEngineStateProducer.cc
   src/RandomFilter.cc
   src/RandomNumberGeneratorService.cc
   src/TRandomAdaptor.cc
-  src/RandomEngineStateProducer.cc
 )
 
-target_include_directories(IOMCRandomEngine PUBLIC ${PYTHON_INCLUDE_DIR})
-include_directories(IOMCRandomEngine PUBLIC ${PYTHON_INCLUDE_DIR})
-target_include_directories(IOMCRandomEngine PUBLIC ${Boost_INCLUDE_DIR}/python)
-include_directories(IOMCRandomEngine PUBLIC ${Boost_INCLUDE_DIR}/python)
-target_include_directories(IOMCRandomEngine PUBLIC ${TINYXML_INCLUDE_DIR})
-include_directories(IOMCRandomEngine PUBLIC ${TINYXML_INCLUDE_DIR})
-target_include_directories(IOMCRandomEngine PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(IOMCRandomEngine PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(IOMCRandomEngine PUBLIC ${MD5_INCLUDE_DIR})
-include_directories(IOMCRandomEngine PUBLIC ${MD5_INCLUDE_DIR})
-target_include_directories(IOMCRandomEngine PUBLIC ${CLHEP_INCLUDE_DIR})
-include_directories(IOMCRandomEngine PUBLIC ${CLHEP_INCLUDE_DIR})
-target_include_directories(IOMCRandomEngine PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(IOMCRandomEngine PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(IOMCRandomEngine PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(IOMCRandomEngine PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(IOMCRandomEngine PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(IOMCRandomEngine PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${CLHEP_INCLUDE_DIR}
+ ${GSL_INCLUDE_DIR}
+ ${MD5_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+ ${XERCESC_INCLUDE_DIR}
+)
 target_link_libraries(IOMCRandomEngine PUBLIC
-  FWCoreParameterSet
-  Thread
-  FWCoreMessageLogger
-  FWCoreFramework
-  Tree
-  ${GSL}
-  MathMore
-  MathCore
-  FWCoreServiceRegistry
-  Net
-  DataFormatsProvenance
-  SimDataFormatsRandomEngine
-  Core
-  GenVector
   ${CLHEP_MAIN_LIBRARY}
+  Core
+  DataFormatsProvenance
+  FWCoreFramework
+  FWCoreMessageLogger
+  FWCoreParameterSet
+  FWCoreServiceRegistry
   FWCoreUtilities
+  GenVector
+  MathCore
+  MathMore
+  Net
   RIO
+  SimDataFormatsRandomEngine
+  Thread
+  Tree
+  gsl
 )
 
-install( TARGETS IOMCRandomEngine EXPORT IOMCRandomEngine DESTINATION  lib )
+install( TARGETS IOMCRandomEngine DESTINATION  lib  EXPORT stitched::IOMCRandomEngine)
 
