--- a/IOPool/Common/bin/CMakeLists.txt
+++ b/IOPool/Common/bin/CMakeLists.txt
@@ -2,102 +2,123 @@ add_executable(edmProvDump
   EdmProvDump.cc
 )
 
-target_include_directories(edmProvDump PUBLIC ${PYTHON_INCLUDE_DIR})
-include_directories(edmProvDump PUBLIC ${PYTHON_INCLUDE_DIR})
-target_include_directories(edmProvDump PUBLIC ${MD5_INCLUDE_DIR})
-include_directories(edmProvDump PUBLIC ${MD5_INCLUDE_DIR})
-target_include_directories(edmProvDump PUBLIC ${Boost_INCLUDE_DIR}/python)
-include_directories(edmProvDump PUBLIC ${Boost_INCLUDE_DIR}/python)
-target_include_directories(edmProvDump PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(edmProvDump PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(edmProvDump PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(edmProvDump PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(edmProvDump PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(edmProvDump PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(edmProvDump PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(edmProvDump PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+ ${XERCESC_INCLUDE_DIR}
+)
 target_link_libraries(edmProvDump PUBLIC
-  FWCoreParameterSet
-  IOPoolCommon
-  Thread
-  Core
-  FWCoreServices
-  Tree
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
-  FWCoreUtilities
-  RIO
-  MathCore
-  FWCoreCatalog
-  DataFormatsStdDictionaries
-  Net
-  DataFormatsWrappedStdDictionaries
+  Core
+  DataFormatsCommon
   DataFormatsProvenance
+  DataFormatsStdDictionaries
+  DataFormatsWrappedStdDictionaries
+  FWCoreCatalog
+  FWCoreParameterSet
   FWCoreServiceRegistry
+  FWCoreServices
+  FWCoreUtilities
+  IOPoolCommon
+  MathCore
+  Net
+  RIO
+  Thread
+  Tree
 )
 
-install( TARGETS edmProvDump EXPORT edmProvDump DESTINATION  bin )
+install( TARGETS edmProvDump DESTINATION  bin  EXPORT stitched::edmProvDump)
 
 add_executable(edmFileUtil
-  EdmFileUtil.cpp
   CollUtil.cc
+  EdmFileUtil.cpp
 )
 
-target_include_directories(edmFileUtil PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(edmFileUtil PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(edmFileUtil PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(edmFileUtil PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(edmFileUtil PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(edmFileUtil PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+ ${XERCESC_INCLUDE_DIR}
+)
 target_link_libraries(edmFileUtil PUBLIC
-  FWCoreParameterSet
-  dl
-  Matrix
-  Thread
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  Tree
-  Hist
-  ${Boost_THREAD_LIBRARY_RELEASE}
-  MathCore
-  ${Boost_SYSTEM_LIBRARY_RELEASE}
-  FWCoreServiceRegistry
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  FWCorePluginManager
-  Net
-  ${Boost_PYTHON_LIBRARY_RELEASE}
-  DataFormatsProvenance
-  Core
-  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  FWCoreServices
-  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
-  ${PYTHON_LIBRARY}
-  RIO
-  IOPoolCommon
   ${Boost_FILESYSTEM_LIBRARY_RELEASE}
+  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
+  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
+  ${Boost_PYTHON_LIBRARY_RELEASE}
+  ${Boost_REGEX_LIBRARY_RELEASE}
+  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
+  ${Boost_SYSTEM_LIBRARY_RELEASE}
+  ${Boost_THREAD_LIBRARY_RELEASE}
+  ${PYTHON_LIBRARY}
+  Core
+  DataFormatsProvenance
   FWCoreCatalog
+  FWCoreParameterSet
+  FWCorePluginManager
+  FWCoreServiceRegistry
+  FWCoreServices
+  Hist
+  IOPoolCommon
+  MathCore
+  Matrix
+  Net
+  RIO
+  Thread
+  Tree
+  dl
 )
 
-install( TARGETS edmFileUtil EXPORT edmFileUtil DESTINATION  bin )
+install( TARGETS edmFileUtil DESTINATION  bin  EXPORT stitched::edmFileUtil)
 
 add_executable(edmCopyUtil
   EdmCopyUtil.cpp
 )
 
-target_include_directories(edmCopyUtil PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(edmCopyUtil PUBLIC ${Boost_INCLUDE_DIR})
+target_include_directories(edmCopyUtil PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(edmCopyUtil PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${OPENSSL_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+ ${XERCESC_INCLUDE_DIR}
+)
+add_compile_options("-D_FILE_OFFSET_BITS=64")
 target_link_libraries(edmCopyUtil PUBLIC
-  FWCoreParameterSet
-  dl
+  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
   ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  FWCoreServices
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
   ${Boost_PYTHON_LIBRARY_RELEASE}
-  ${Boost_THREAD_LIBRARY_RELEASE}
-  FWCoreCatalog
-  IOPoolCommon
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  UtilitiesStorageFactory
+  ${Boost_REGEX_LIBRARY_RELEASE}
+  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
   ${Boost_SYSTEM_LIBRARY_RELEASE}
+  ${Boost_THREAD_LIBRARY_RELEASE}
   ${PYTHON_LIBRARY}
+  FWCoreCatalog
+  FWCoreParameterSet
   FWCoreServiceRegistry
+  FWCoreServices
+  IOPoolCommon
+  UtilitiesStorageFactory
+  dl
 )
 
-install( TARGETS edmCopyUtil EXPORT edmCopyUtil DESTINATION  bin )
+install( TARGETS edmCopyUtil DESTINATION  bin  EXPORT stitched::edmCopyUtil)
 
