--- a/IOPool/TFileAdaptor/CMakeLists.txt
+++ b/IOPool/TFileAdaptor/CMakeLists.txt
@@ -1,33 +1,57 @@
-include_directories(${CMAKE_SOURCE_DIR})
-include_directories(/usr/include/)
 if(BUILDTEST)
 add_subdirectory(test)
 endif()
-reflex_dictionary(IOPoolTFileAdaptor src/classes.h src/classes_def.xml)
 add_library(IOPoolTFileAdaptor SHARED 
   src/ReadRepacker.cc
   src/TFileAdaptor.cc
   src/TStorageFactoryFile.cc
   src/TStorageFactorySystem.cc
-  IOPoolTFileAdaptorDict.cpp
 )
 
-add_dependencies(IOPoolTFileAdaptor IOPoolTFileAdaptorDict)
-target_include_directories(IOPoolTFileAdaptor PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(IOPoolTFileAdaptor PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(IOPoolTFileAdaptor PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(IOPoolTFileAdaptor PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${OPENSSL_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+ ${XERCESC_INCLUDE_DIR}
+)
+add_compile_options("-D_FILE_OFFSET_BITS=64")
 target_link_libraries(IOPoolTFileAdaptor PUBLIC
-  FWCoreParameterSet
-  Thread
   Core
-  FWCoreMessageLogger
-  Tree
-  RIO
-  MathCore
   FWCoreCatalog
+  FWCoreMessageLogger
+  FWCoreParameterSet
   FWCoreServiceRegistry
-  UtilitiesStorageFactory
+  MathCore
   Net
+  RIO
+  Thread
+  Tree
+  UtilitiesStorageFactory
 )
 
-install( TARGETS IOPoolTFileAdaptor EXPORT IOPoolTFileAdaptor DESTINATION  lib )
+install( TARGETS IOPoolTFileAdaptor DESTINATION  lib  EXPORT stitched::IOPoolTFileAdaptor)
 
+include_directories(${CMAKE_SOURCE_DIR})
+include_directories(/usr/include/)
+include_directories(${Boost_INCLUDE_DIR})
+include_directories(${Boost_INCLUDE_DIR}/python)
+include_directories(${MD5_INCLUDE_DIR})
+include_directories(${OPENSSL_INCLUDE_DIR})
+include_directories(${PYTHON_INCLUDE_DIR})
+include_directories(${ROOT_INCLUDE_DIR})
+include_directories(${TBB_INCLUDE_DIRS})
+include_directories(${TINYXML2_INCLUDE_DIR})
+include_directories(${UUID_INCLUDE_DIR})
+include_directories(${XERCESC_INCLUDE_DIR})
+reflex_generate_dictionary(IOPoolTFileAdaptor src/classes.h src/classes_def.xml ROOTMAPLIB IOPoolTFileAdaptorDict)
+add_library(IOPoolTFileAdaptorDict SHARED IOPoolTFileAdaptorDict.cpp)
+add_dependencies(IOPoolTFileAdaptor IOPoolTFileAdaptorGen)
+install( TARGETS IOPoolTFileAdaptorDict DESTINATION lib EXPORT stitched::IOPoolTFileAdaptorDict )
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/IOPoolTFileAdaptorDict_rdict.pcm  ${CMAKE_CURRENT_BINARY_DIR}/IOPoolTFileAdaptor.rootmap DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
