--- a/Utilities/CMakeLists.txt
+++ b/Utilities/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_subdirectory(General)
-add_subdirectory(RFIOAdaptor)
 add_subdirectory(StorageFactory)
+add_subdirectory(Xerces)
+add_subdirectory(XrdAdaptor)
+add_subdirectory(Testing)
 
 
