--- a/Utilities/General/CMakeLists.txt
+++ b/Utilities/General/CMakeLists.txt
@@ -1,29 +1,11 @@
-include_directories(${CMAKE_SOURCE_DIR})
-include_directories(/usr/include/)
 if(BUILDTEST)
 add_subdirectory(test)
 endif()
 add_library(UtilitiesGeneral SHARED 
-  src/FileInPath.cc
   src/ClassName.cc
-  src/Tokenizer.cc
 )
 
-target_include_directories(UtilitiesGeneral PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(UtilitiesGeneral PUBLIC ${Boost_INCLUDE_DIR})
-target_link_libraries(UtilitiesGeneral PUBLIC
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  dl
-  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  ${PYTHON_LIBRARY}
-  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
-  FWCoreUtilities
-  ${Boost_THREAD_LIBRARY_RELEASE}
-  ${Boost_SYSTEM_LIBRARY_RELEASE}
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  ${Boost_PYTHON_LIBRARY_RELEASE}
-)
+target_include_directories(UtilitiesGeneral PRIVATE ${CMAKE_SOURCE_DIR})
 
-install( TARGETS UtilitiesGeneral EXPORT UtilitiesGeneral DESTINATION  lib )
+install( TARGETS UtilitiesGeneral DESTINATION  lib  EXPORT stitched::UtilitiesGeneral)
 
