--- a/Utilities/StorageFactory/CMakeLists.txt
+++ b/Utilities/StorageFactory/CMakeLists.txt
@@ -1,52 +1,60 @@
-include_directories(${CMAKE_SOURCE_DIR})
-include_directories(/usr/include/)
 add_subdirectory(bin)
 if(BUILDTEST)
 add_subdirectory(test)
 endif()
 add_subdirectory(plugins)
 add_library(UtilitiesStorageFactory SHARED 
-  src/IOInput.cc
-  src/StorageMaker.cc
-  src/StatisticsSenderService.cc
-  src/StorageAccountProxy.cc
   src/File.cc
-  src/UnixFile.cc
-  src/UnixIOChannel.cc
-  src/StorageAccount.cc
-  src/RemoteFile.cc
   src/IOChannel.cc
-  src/Throw.cc
-  src/Storage.cc
-  src/LocalFileSystem.cc
-  src/StorageMakerFactory.cc
+  src/IOInput.cc
   src/IOOutput.cc
   src/LocalCacheFile.cc
+  src/LocalFileSystem.cc
+  src/RemoteFile.cc
+  src/StatisticsSenderService.cc
+  src/Storage.cc
+  src/StorageAccount.cc
+  src/StorageAccountProxy.cc
   src/StorageFactory.cc
+  src/StorageMaker.cc
+  src/StorageMakerFactory.cc
+  src/Throw.cc
+  src/UnixFile.cc
+  src/UnixIOChannel.cc
 )
 
-target_include_directories(UtilitiesStorageFactory PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(UtilitiesStorageFactory PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(UtilitiesStorageFactory PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(UtilitiesStorageFactory PUBLIC ${TBB_INCLUDE_DIRS})
-target_compile_options(UtilitiesStorageFactory PUBLIC -D_FILE_OFFSET_BITS=64)
+target_include_directories(UtilitiesStorageFactory PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(UtilitiesStorageFactory PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${OPENSSL_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
+add_compile_options("-D_FILE_OFFSET_BITS=64")
 target_link_libraries(UtilitiesStorageFactory PUBLIC
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  dl
+  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
   ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  FWCoreUtilities
-  FWCoreMessageLogger
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
   ${Boost_PYTHON_LIBRARY_RELEASE}
-  ${Boost_THREAD_LIBRARY_RELEASE}
+  ${Boost_REGEX_LIBRARY_RELEASE}
+  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
   ${Boost_SYSTEM_LIBRARY_RELEASE}
-  FWCoreServiceRegistry
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  FWCorePluginManager
-  ${TBB_LIBRARIES}
+  ${Boost_THREAD_LIBRARY_RELEASE}
+  ${OPENSSL_CRYPTO_LIBRARY}
+  ${OPENSSL_SSL_LIBRARY}
   ${PYTHON_LIBRARY}
+  ${TBB_LIBRARIES}
+  FWCoreMessageLogger
+  FWCorePluginManager
+  FWCoreServiceRegistry
+  FWCoreUtilities
+  dl
 )
 
-install( TARGETS UtilitiesStorageFactory EXPORT UtilitiesStorageFactory DESTINATION  lib )
+install( TARGETS UtilitiesStorageFactory DESTINATION  lib  EXPORT stitched::UtilitiesStorageFactory)
 
