--- a/Utilities/StorageFactory/plugins/CMakeLists.txt
+++ b/Utilities/StorageFactory/plugins/CMakeLists.txt
@@ -2,18 +2,27 @@ add_library(UtilitiesStorageFactoryPlugins SHARED
   GsiFTPStorageMaker.cc
   HttpStorageMaker.cc
   LocalStorageMaker.cc
-  StormStorageMaker.cc
-  StormLCGStorageMaker.cc
   StatisticsSenderServiceMaker.cc
+  StormLCGStorageMaker.cc
+  StormStorageMaker.cc
 )
 
-target_include_directories(UtilitiesStorageFactoryPlugins PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(UtilitiesStorageFactoryPlugins PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(UtilitiesStorageFactoryPlugins PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(UtilitiesStorageFactoryPlugins PUBLIC ${TBB_INCLUDE_DIRS})
+target_include_directories(UtilitiesStorageFactoryPlugins PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(UtilitiesStorageFactoryPlugins PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${OPENSSL_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
+add_compile_options("-D_FILE_OFFSET_BITS=64")
 target_link_libraries(UtilitiesStorageFactoryPlugins PUBLIC
   UtilitiesStorageFactory
 )
 
-install( TARGETS UtilitiesStorageFactoryPlugins EXPORT UtilitiesStorageFactoryPlugins DESTINATION  lib )
+install( TARGETS UtilitiesStorageFactoryPlugins DESTINATION  lib  EXPORT stitched::UtilitiesStorageFactoryPlugins)
 
