--- a/Utilities/StorageFactory/test/CMakeLists.txt
+++ b/Utilities/StorageFactory/test/CMakeLists.txt
@@ -2,15 +2,22 @@ add_executable(test_StorageFactory_t0Repack
   t0Repack.cpp
 )
 
-target_include_directories(test_StorageFactory_t0Repack PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(test_StorageFactory_t0Repack PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(test_StorageFactory_t0Repack PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(test_StorageFactory_t0Repack PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(test_StorageFactory_t0Repack PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(test_StorageFactory_t0Repack PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(test_StorageFactory_t0Repack PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(test_StorageFactory_t0Repack PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${OPENSSL_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
+add_compile_options("-D_FILE_OFFSET_BITS=64")
 target_link_libraries(test_StorageFactory_t0Repack PUBLIC
-  UtilitiesStorageFactory
   FWCoreParameterSet
+  UtilitiesStorageFactory
 )
 
 add_test(NAME test_StorageFactory_t0Repack COMMAND test_StorageFactory_t0Repack)
@@ -18,9 +25,22 @@ add_executable(test_StorageFactory_randomread
   randomread.cpp
 )
 
+target_include_directories(test_StorageFactory_randomread PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(test_StorageFactory_randomread PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${OPENSSL_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
+add_compile_options("-D_FILE_OFFSET_BITS=64")
 target_link_libraries(test_StorageFactory_randomread PUBLIC
-  UtilitiesStorageFactory
   FWCoreParameterSet
+  UtilitiesStorageFactory
 )
 
 add_test(NAME test_StorageFactory_randomread COMMAND test_StorageFactory_randomread)
@@ -28,15 +48,22 @@ add_executable(test_StorageFactory_Any
   any.cpp
 )
 
-target_include_directories(test_StorageFactory_Any PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(test_StorageFactory_Any PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(test_StorageFactory_Any PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(test_StorageFactory_Any PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(test_StorageFactory_Any PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(test_StorageFactory_Any PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(test_StorageFactory_Any PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(test_StorageFactory_Any PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${OPENSSL_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
+add_compile_options("-D_FILE_OFFSET_BITS=64")
 target_link_libraries(test_StorageFactory_Any PUBLIC
-  UtilitiesStorageFactory
   FWCoreParameterSet
+  UtilitiesStorageFactory
 )
 
 add_test(NAME test_StorageFactory_Any COMMAND test_StorageFactory_Any)
@@ -44,15 +71,22 @@ add_executable(test_StorageFactory_Local
   local.cpp
 )
 
-target_include_directories(test_StorageFactory_Local PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(test_StorageFactory_Local PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(test_StorageFactory_Local PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(test_StorageFactory_Local PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(test_StorageFactory_Local PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(test_StorageFactory_Local PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(test_StorageFactory_Local PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(test_StorageFactory_Local PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${OPENSSL_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
+add_compile_options("-D_FILE_OFFSET_BITS=64")
 target_link_libraries(test_StorageFactory_Local PUBLIC
-  UtilitiesStorageFactory
   FWCoreParameterSet
+  UtilitiesStorageFactory
 )
 
 add_test(NAME test_StorageFactory_Local COMMAND test_StorageFactory_Local)
@@ -60,15 +94,22 @@ add_executable(test_StorageFactory_Local2
   local2.cpp
 )
 
-target_include_directories(test_StorageFactory_Local2 PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(test_StorageFactory_Local2 PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(test_StorageFactory_Local2 PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(test_StorageFactory_Local2 PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(test_StorageFactory_Local2 PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(test_StorageFactory_Local2 PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(test_StorageFactory_Local2 PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(test_StorageFactory_Local2 PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${OPENSSL_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
+add_compile_options("-D_FILE_OFFSET_BITS=64")
 target_link_libraries(test_StorageFactory_Local2 PUBLIC
-  UtilitiesStorageFactory
   FWCoreParameterSet
+  UtilitiesStorageFactory
 )
 
 add_test(NAME test_StorageFactory_Local2 COMMAND test_StorageFactory_Local2)
@@ -76,15 +117,22 @@ add_executable(test_StorageFactory_Local3
   local3.cpp
 )
 
-target_include_directories(test_StorageFactory_Local3 PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(test_StorageFactory_Local3 PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(test_StorageFactory_Local3 PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(test_StorageFactory_Local3 PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(test_StorageFactory_Local3 PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(test_StorageFactory_Local3 PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(test_StorageFactory_Local3 PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(test_StorageFactory_Local3 PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${OPENSSL_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
+add_compile_options("-D_FILE_OFFSET_BITS=64")
 target_link_libraries(test_StorageFactory_Local3 PUBLIC
-  UtilitiesStorageFactory
   FWCoreParameterSet
+  UtilitiesStorageFactory
 )
 
 add_test(NAME test_StorageFactory_Local3 COMMAND test_StorageFactory_Local3)
@@ -92,15 +140,22 @@ add_executable(test_StorageFactory_Ftp
   ftp.cpp
 )
 
-target_include_directories(test_StorageFactory_Ftp PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(test_StorageFactory_Ftp PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(test_StorageFactory_Ftp PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(test_StorageFactory_Ftp PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(test_StorageFactory_Ftp PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(test_StorageFactory_Ftp PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(test_StorageFactory_Ftp PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(test_StorageFactory_Ftp PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${OPENSSL_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
+add_compile_options("-D_FILE_OFFSET_BITS=64")
 target_link_libraries(test_StorageFactory_Ftp PUBLIC
-  UtilitiesStorageFactory
   FWCoreParameterSet
+  UtilitiesStorageFactory
 )
 
 add_test(NAME test_StorageFactory_Ftp COMMAND test_StorageFactory_Ftp)
@@ -108,15 +163,22 @@ add_executable(test_StorageFactory_Ftp2
   ftp2.cpp
 )
 
-target_include_directories(test_StorageFactory_Ftp2 PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(test_StorageFactory_Ftp2 PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(test_StorageFactory_Ftp2 PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(test_StorageFactory_Ftp2 PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(test_StorageFactory_Ftp2 PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(test_StorageFactory_Ftp2 PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(test_StorageFactory_Ftp2 PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(test_StorageFactory_Ftp2 PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${OPENSSL_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
+add_compile_options("-D_FILE_OFFSET_BITS=64")
 target_link_libraries(test_StorageFactory_Ftp2 PUBLIC
-  UtilitiesStorageFactory
   FWCoreParameterSet
+  UtilitiesStorageFactory
 )
 
 add_test(NAME test_StorageFactory_Ftp2 COMMAND test_StorageFactory_Ftp2)
@@ -124,15 +186,22 @@ add_executable(test_StorageFactory_Rfio2
   rfio2.cpp
 )
 
-target_include_directories(test_StorageFactory_Rfio2 PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(test_StorageFactory_Rfio2 PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(test_StorageFactory_Rfio2 PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(test_StorageFactory_Rfio2 PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(test_StorageFactory_Rfio2 PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(test_StorageFactory_Rfio2 PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(test_StorageFactory_Rfio2 PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(test_StorageFactory_Rfio2 PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${OPENSSL_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
+add_compile_options("-D_FILE_OFFSET_BITS=64")
 target_link_libraries(test_StorageFactory_Rfio2 PUBLIC
-  UtilitiesStorageFactory
   FWCoreParameterSet
+  UtilitiesStorageFactory
 )
 
 add_test(NAME test_StorageFactory_Rfio2 COMMAND test_StorageFactory_Rfio2)
@@ -140,15 +209,22 @@ add_executable(test_StorageFactory_Rfio3
   rfio3.cpp
 )
 
-target_include_directories(test_StorageFactory_Rfio3 PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(test_StorageFactory_Rfio3 PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(test_StorageFactory_Rfio3 PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(test_StorageFactory_Rfio3 PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(test_StorageFactory_Rfio3 PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(test_StorageFactory_Rfio3 PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(test_StorageFactory_Rfio3 PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(test_StorageFactory_Rfio3 PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${OPENSSL_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
+add_compile_options("-D_FILE_OFFSET_BITS=64")
 target_link_libraries(test_StorageFactory_Rfio3 PUBLIC
-  UtilitiesStorageFactory
   FWCoreParameterSet
+  UtilitiesStorageFactory
 )
 
 add_test(NAME test_StorageFactory_Rfio3 COMMAND test_StorageFactory_Rfio3)
@@ -156,15 +232,22 @@ add_executable(test_StorageFactory_Write
   write.cpp
 )
 
-target_include_directories(test_StorageFactory_Write PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(test_StorageFactory_Write PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(test_StorageFactory_Write PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(test_StorageFactory_Write PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(test_StorageFactory_Write PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(test_StorageFactory_Write PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(test_StorageFactory_Write PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(test_StorageFactory_Write PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${OPENSSL_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
+add_compile_options("-D_FILE_OFFSET_BITS=64")
 target_link_libraries(test_StorageFactory_Write PUBLIC
-  UtilitiesStorageFactory
   FWCoreParameterSet
+  UtilitiesStorageFactory
 )
 
 add_test(NAME test_StorageFactory_Write COMMAND test_StorageFactory_Write)
@@ -172,13 +255,22 @@ add_executable(test_StorageFactory_Mkstemp
   mkstemp.cpp
 )
 
-target_include_directories(test_StorageFactory_Mkstemp PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(test_StorageFactory_Mkstemp PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(test_StorageFactory_Mkstemp PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(test_StorageFactory_Mkstemp PUBLIC ${TBB_INCLUDE_DIRS})
+target_include_directories(test_StorageFactory_Mkstemp PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(test_StorageFactory_Mkstemp PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${OPENSSL_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
+add_compile_options("-D_FILE_OFFSET_BITS=64")
 target_link_libraries(test_StorageFactory_Mkstemp PUBLIC
-  UtilitiesStorageFactory
   FWCoreParameterSet
+  UtilitiesStorageFactory
 )
 
 add_test(NAME test_StorageFactory_Mkstemp COMMAND test_StorageFactory_Mkstemp)
