--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0)
-project(CMSSW)
+project(CMSSW C CXX Fortran)
 
 include_directories(${CMAKE_SOURCE_DIR})
 include_directories(/usr/include/)
@@ -11,25 +11,35 @@ set(Boost_NO_SYSTEM_PATHS ON)
 find_package(Boost 1.57.0 COMPONENTS filesystem thread iostreams python regex serialization system program_options )
 find_package(PythonInterp)
 find_package(PythonLibs)
+find_package(Threads)
 find_package(XercesC)
-find_package(CLHEP)
+find_package(UUID)
+find_package(TINYXML2)
+find_package(OpenSSL)
 find_package(CMSMD5)
-find_package(TINYXML)
-find_package(CASTOR)
 find_package(TBB)
 find_package(CppUnit)
+find_package(CLHEP)
 include_directories(${PYTHON_INCLUDE_DIR})
+include_directories(${XERCESC_INCLUDE_DIR})
+include_directories(${TINYXML2_INCLUDE_DIR})
+include_directories(${CATCH2_INCLUDE_DIR})
 include_directories(${Boost_INCLUDE_DIR}/python)
-include_directories(${TINYXML_INCLUDE_DIR})
-include_directories(${Boost_INCLUDE_DIR})
+include_directories(${VDT_INCLUDE_DIR})
 include_directories(${MD5_INCLUDE_DIR})
-include_directories(${CASTOR_INCLUDE_DIRS})
 include_directories(${CPPUNIT_INCLUDE_DIR})
-include_directories(${CASTOR_INCLUDE_DIRS}/shift)
-include_directories(${CLHEP_INCLUDE_DIR})
-include_directories(${TBB_INCLUDE_DIRS})
+include_directories(${JEMALLOC_INCLUDE_DIR})
+include_directories(${ZLIB_INCLUDE_DIR})
+include_directories(${TCMALLOC_INCLUDE_DIR})
+include_directories(${UUID_INCLUDE_DIR})
 include_directories(${ROOT_INCLUDE_DIR})
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -Wno-attributes -Wno-deprecated-declarations -std=c++14")
+include_directories(${PYTHON_INCLUDE_DIR}/pybind11)
+include_directories(${XROOTD_INCLUDE_DIR})
+include_directories(${TBB_INCLUDE_DIRS})
+include_directories(${OPENSSL_INCLUDE_DIR})
+include_directories(${Boost_INCLUDE_DIR})
+include_directories(${GSL_INCLUDE_DIR})
+include_directories(${CLHEP_INCLUDE_DIR})
 add_subdirectory(DataFormats)
 install(DIRECTORY DataFormats DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
 add_subdirectory(FWCore)
@@ -42,8 +52,11 @@ add_subdirectory(SimDataFormats)
 install(DIRECTORY SimDataFormats DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
 add_subdirectory(Utilities)
 install(DIRECTORY Utilities DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
+add_subdirectory(cmaketools)
+install(DIRECTORY cmaketools DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
 install(FILES CMakeLists.txt DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
 install(DIRECTORY cmaketools DESTINATION ${CMAKE_INSTALL_PREFIX}/src PATTERN ".git" EXCLUDE)
+install(DIRECTORY scram2cmake DESTINATION ${CMAKE_INSTALL_PREFIX}/src PATTERN ".git" EXCLUDE)
 set(BUILD_TESTING ON)
 include(CTest)
 enable_testing()
