--- a/DataFormats/FEDRawData/test/CMakeLists.txt
+++ b/DataFormats/FEDRawData/test/CMakeLists.txt
@@ -1,10 +1,18 @@
 add_executable(testFEDRawData
-  FEDRawData_t.cpp
   FEDRawDataProduct_t.cc
+  FEDRawData_t.cpp
 )
 
-target_include_directories(testFEDRawData PUBLIC ${CPPUNIT_INCLUDE_DIR})
-include_directories(testFEDRawData PUBLIC ${CPPUNIT_INCLUDE_DIR})
+target_include_directories(testFEDRawData PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(testFEDRawData PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${CPPUNIT_INCLUDE_DIR}
+ ${MD5_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
 target_link_libraries(testFEDRawData PUBLIC
   ${CPPUNIT_LIBRARY}
   DataFormatsFEDRawData
@@ -15,8 +23,20 @@ add_library(testDumpFEDRawDataProduct SHARED
   DumpFEDRawDataProduct.cc
 )
 
+target_include_directories(testDumpFEDRawDataProduct PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(testDumpFEDRawDataProduct PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+ ${XERCESC_INCLUDE_DIR}
+)
 target_link_libraries(testDumpFEDRawDataProduct PUBLIC
-  FWCoreFramework
   DataFormatsFEDRawData
+  FWCoreFramework
 )
 
