--- a/DataFormats/TestObjects/test/CMakeLists.txt
+++ b/DataFormats/TestObjects/test/CMakeLists.txt
@@ -2,15 +2,28 @@ add_executable(Enum_t
   Enum_t.cpp
 )
 
-target_include_directories(Enum_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
-include_directories(Enum_t PUBLIC ${CPPUNIT_INCLUDE_DIR})
-target_include_directories(Enum_t PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(Enum_t PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(Enum_t PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(Enum_t PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${CPPUNIT_INCLUDE_DIR}
+ ${MD5_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
 target_link_libraries(Enum_t PUBLIC
   ${CPPUNIT_LIBRARY}
-  DataFormatsWrappedStdDictionaries
+  Core
+  DataFormatsCommon
   DataFormatsStdDictionaries
   DataFormatsTestObjects
+  DataFormatsWrappedStdDictionaries
+  MathCore
+  Net
+  RIO
+  Thread
+  Tree
 )
 
 add_test(NAME Enum_t COMMAND Enum_t)
