--- a/FWCore/MessageService/plugins/CMakeLists.txt
+++ b/FWCore/MessageService/plugins/CMakeLists.txt
@@ -2,9 +2,20 @@ add_library(FWCoreMessageServicePlugins SHARED
   Module.cc
 )
 
+target_include_directories(FWCoreMessageServicePlugins PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(FWCoreMessageServicePlugins PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+)
 target_link_libraries(FWCoreMessageServicePlugins PUBLIC
   FWCoreMessageService
 )
 
-install( TARGETS FWCoreMessageServicePlugins EXPORT FWCoreMessageServicePlugins DESTINATION  lib )
+install( TARGETS FWCoreMessageServicePlugins DESTINATION  lib  EXPORT stitched::FWCoreMessageServicePlugins)
 
