--- a/FWCore/PluginManager/test/CMakeLists.txt
+++ b/FWCore/PluginManager/test/CMakeLists.txt
@@ -2,23 +2,28 @@ add_executable(TestFWCorePluginManagerPluginFactoryManager
   pluginfactorymanager_t.cc
 )
 
-target_include_directories(TestFWCorePluginManagerPluginFactoryManager PUBLIC ${CPPUNIT_INCLUDE_DIR})
-include_directories(TestFWCorePluginManagerPluginFactoryManager PUBLIC ${CPPUNIT_INCLUDE_DIR})
-target_include_directories(TestFWCorePluginManagerPluginFactoryManager PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(TestFWCorePluginManagerPluginFactoryManager PUBLIC ${Boost_INCLUDE_DIR})
+target_include_directories(TestFWCorePluginManagerPluginFactoryManager PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(TestFWCorePluginManagerPluginFactoryManager PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${CPPUNIT_INCLUDE_DIR}
+ ${MD5_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${UUID_INCLUDE_DIR}
+)
 target_link_libraries(TestFWCorePluginManagerPluginFactoryManager PUBLIC
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  dl
+  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
   ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
   ${Boost_PYTHON_LIBRARY_RELEASE}
+  ${Boost_REGEX_LIBRARY_RELEASE}
+  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
+  ${Boost_SYSTEM_LIBRARY_RELEASE}
   ${Boost_THREAD_LIBRARY_RELEASE}
   ${CPPUNIT_LIBRARY}
-  ${Boost_SYSTEM_LIBRARY_RELEASE}
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  FWCorePluginManager
   ${PYTHON_LIBRARY}
+  FWCorePluginManager
+  dl
 )
 
 add_test(NAME TestFWCorePluginManagerPluginFactoryManager COMMAND TestFWCorePluginManagerPluginFactoryManager)
@@ -26,30 +31,29 @@ add_executable(TestFWCorePluginManagerPluginManager
   pluginmanager_t.cc
 )
 
-target_include_directories(TestFWCorePluginManagerPluginManager PUBLIC ${CPPUNIT_INCLUDE_DIR})
-include_directories(TestFWCorePluginManagerPluginManager PUBLIC ${CPPUNIT_INCLUDE_DIR})
-target_include_directories(TestFWCorePluginManagerPluginManager PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(TestFWCorePluginManagerPluginManager PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(TestFWCorePluginManagerPluginManager PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(TestFWCorePluginManagerPluginManager PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(TestFWCorePluginManagerPluginManager PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(TestFWCorePluginManagerPluginManager PUBLIC ${ROOT_INCLUDE_DIR})
-target_include_directories(TestFWCorePluginManagerPluginManager PUBLIC ${MD5_INCLUDE_DIR})
-include_directories(TestFWCorePluginManagerPluginManager PUBLIC ${MD5_INCLUDE_DIR})
+target_include_directories(TestFWCorePluginManagerPluginManager PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(TestFWCorePluginManagerPluginManager PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${CPPUNIT_INCLUDE_DIR}
+ ${MD5_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${UUID_INCLUDE_DIR}
+)
 target_link_libraries(TestFWCorePluginManagerPluginManager PUBLIC
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  dl
+  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
   ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
   ${Boost_PYTHON_LIBRARY_RELEASE}
+  ${Boost_REGEX_LIBRARY_RELEASE}
+  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
+  ${Boost_SYSTEM_LIBRARY_RELEASE}
   ${Boost_THREAD_LIBRARY_RELEASE}
   ${CPPUNIT_LIBRARY}
-  ${Boost_SYSTEM_LIBRARY_RELEASE}
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  TestFWCorePluginManagerDummyFactory
-  FWCorePluginManager
   ${PYTHON_LIBRARY}
+  FWCorePluginManager
+  TestFWCorePluginManagerDummyFactory
+  dl
 )
 
 add_test(NAME TestFWCorePluginManagerPluginManager COMMAND TestFWCorePluginManagerPluginManager)
@@ -57,23 +61,28 @@ add_executable(TestFWCorePluginManagerCacheParser
   cacheparser_t.cc
 )
 
-target_include_directories(TestFWCorePluginManagerCacheParser PUBLIC ${CPPUNIT_INCLUDE_DIR})
-include_directories(TestFWCorePluginManagerCacheParser PUBLIC ${CPPUNIT_INCLUDE_DIR})
-target_include_directories(TestFWCorePluginManagerCacheParser PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(TestFWCorePluginManagerCacheParser PUBLIC ${Boost_INCLUDE_DIR})
+target_include_directories(TestFWCorePluginManagerCacheParser PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(TestFWCorePluginManagerCacheParser PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${CPPUNIT_INCLUDE_DIR}
+ ${MD5_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${UUID_INCLUDE_DIR}
+)
 target_link_libraries(TestFWCorePluginManagerCacheParser PUBLIC
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  dl
+  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
   ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
   ${Boost_PYTHON_LIBRARY_RELEASE}
+  ${Boost_REGEX_LIBRARY_RELEASE}
+  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
+  ${Boost_SYSTEM_LIBRARY_RELEASE}
   ${Boost_THREAD_LIBRARY_RELEASE}
   ${CPPUNIT_LIBRARY}
-  ${Boost_SYSTEM_LIBRARY_RELEASE}
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  FWCorePluginManager
   ${PYTHON_LIBRARY}
+  FWCorePluginManager
+  dl
 )
 
 add_test(NAME TestFWCorePluginManagerCacheParser COMMAND TestFWCorePluginManagerCacheParser)
@@ -81,23 +90,28 @@ add_executable(TestFWCorePluginManagerPluginFactory
   pluginfactory_t.cc
 )
 
-target_include_directories(TestFWCorePluginManagerPluginFactory PUBLIC ${CPPUNIT_INCLUDE_DIR})
-include_directories(TestFWCorePluginManagerPluginFactory PUBLIC ${CPPUNIT_INCLUDE_DIR})
-target_include_directories(TestFWCorePluginManagerPluginFactory PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(TestFWCorePluginManagerPluginFactory PUBLIC ${Boost_INCLUDE_DIR})
+target_include_directories(TestFWCorePluginManagerPluginFactory PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(TestFWCorePluginManagerPluginFactory PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${CPPUNIT_INCLUDE_DIR}
+ ${MD5_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${UUID_INCLUDE_DIR}
+)
 target_link_libraries(TestFWCorePluginManagerPluginFactory PUBLIC
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  dl
+  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
   ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
   ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
   ${Boost_PYTHON_LIBRARY_RELEASE}
+  ${Boost_REGEX_LIBRARY_RELEASE}
+  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
+  ${Boost_SYSTEM_LIBRARY_RELEASE}
   ${Boost_THREAD_LIBRARY_RELEASE}
   ${CPPUNIT_LIBRARY}
-  ${Boost_SYSTEM_LIBRARY_RELEASE}
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  FWCorePluginManager
   ${PYTHON_LIBRARY}
+  FWCorePluginManager
+  dl
 )
 
 add_test(NAME TestFWCorePluginManagerPluginFactory COMMAND TestFWCorePluginManagerPluginFactory)
@@ -105,6 +119,14 @@ add_library(TestFWCorePluginManagerDummyFactory SHARED
   DummyFactory.cc
 )
 
+target_include_directories(TestFWCorePluginManagerDummyFactory PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(TestFWCorePluginManagerDummyFactory PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${MD5_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${UUID_INCLUDE_DIR}
+)
 target_link_libraries(TestFWCorePluginManagerDummyFactory PUBLIC
   FWCorePluginManager
 )
@@ -114,14 +136,14 @@ add_library(TestFWCorePluginManagerDummyPlugins SHARED
   TwoDummy.cc
 )
 
-target_include_directories(TestFWCorePluginManagerDummyPlugins PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(TestFWCorePluginManagerDummyPlugins PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(TestFWCorePluginManagerDummyPlugins PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(TestFWCorePluginManagerDummyPlugins PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(TestFWCorePluginManagerDummyPlugins PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(TestFWCorePluginManagerDummyPlugins PUBLIC ${ROOT_INCLUDE_DIR})
-target_include_directories(TestFWCorePluginManagerDummyPlugins PUBLIC ${MD5_INCLUDE_DIR})
-include_directories(TestFWCorePluginManagerDummyPlugins PUBLIC ${MD5_INCLUDE_DIR})
+target_include_directories(TestFWCorePluginManagerDummyPlugins PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(TestFWCorePluginManagerDummyPlugins PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${MD5_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${UUID_INCLUDE_DIR}
+)
 target_link_libraries(TestFWCorePluginManagerDummyPlugins PUBLIC
   FWCorePluginManager
   TestFWCorePluginManagerDummyFactory
