--- a/FWCore/Services/bin/CMakeLists.txt
+++ b/FWCore/Services/bin/CMakeLists.txt
@@ -2,22 +2,26 @@ add_executable(cmsGetFnConnect
   cmsGetFnConnect.cc
 )
 
-target_include_directories(cmsGetFnConnect PUBLIC ${Boost_INCLUDE_DIR}/python)
-include_directories(cmsGetFnConnect PUBLIC ${Boost_INCLUDE_DIR}/python)
-target_include_directories(cmsGetFnConnect PUBLIC ${PYTHON_INCLUDE_DIR})
-include_directories(cmsGetFnConnect PUBLIC ${PYTHON_INCLUDE_DIR})
-target_include_directories(cmsGetFnConnect PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(cmsGetFnConnect PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(cmsGetFnConnect PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(cmsGetFnConnect PUBLIC ${TBB_INCLUDE_DIRS})
+target_include_directories(cmsGetFnConnect PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(cmsGetFnConnect PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${MD5_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+ ${XERCESC_INCLUDE_DIR}
+)
 target_link_libraries(cmsGetFnConnect PUBLIC
-  FWCoreParameterSet
   FWCoreCatalog
-  FWCoreServiceRegistry
+  FWCoreParameterSet
   FWCorePluginManager
+  FWCoreServiceRegistry
   FWCoreServices
   FWCoreUtilities
 )
 
-install( TARGETS cmsGetFnConnect EXPORT cmsGetFnConnect DESTINATION  bin )
+install( TARGETS cmsGetFnConnect DESTINATION  bin  EXPORT stitched::cmsGetFnConnect)
 
