--- a/IOMC/RandomEngine/test/CMakeLists.txt
+++ b/IOMC/RandomEngine/test/CMakeLists.txt
@@ -1,91 +1,57 @@
-add_library(IOMCRandomEngineTestRandomNumberServiceAnalyzer SHARED 
-  TestRandomNumberServiceAnalyzer.cc
-)
-
-target_include_directories(IOMCRandomEngineTestRandomNumberServiceAnalyzer PUBLIC ${PYTHON_INCLUDE_DIR})
-include_directories(IOMCRandomEngineTestRandomNumberServiceAnalyzer PUBLIC ${PYTHON_INCLUDE_DIR})
-target_include_directories(IOMCRandomEngineTestRandomNumberServiceAnalyzer PUBLIC ${Boost_INCLUDE_DIR}/python)
-include_directories(IOMCRandomEngineTestRandomNumberServiceAnalyzer PUBLIC ${Boost_INCLUDE_DIR}/python)
-target_include_directories(IOMCRandomEngineTestRandomNumberServiceAnalyzer PUBLIC ${TINYXML_INCLUDE_DIR})
-include_directories(IOMCRandomEngineTestRandomNumberServiceAnalyzer PUBLIC ${TINYXML_INCLUDE_DIR})
-target_include_directories(IOMCRandomEngineTestRandomNumberServiceAnalyzer PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(IOMCRandomEngineTestRandomNumberServiceAnalyzer PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(IOMCRandomEngineTestRandomNumberServiceAnalyzer PUBLIC ${MD5_INCLUDE_DIR})
-include_directories(IOMCRandomEngineTestRandomNumberServiceAnalyzer PUBLIC ${MD5_INCLUDE_DIR})
-target_include_directories(IOMCRandomEngineTestRandomNumberServiceAnalyzer PUBLIC ${CLHEP_INCLUDE_DIR})
-include_directories(IOMCRandomEngineTestRandomNumberServiceAnalyzer PUBLIC ${CLHEP_INCLUDE_DIR})
-target_include_directories(IOMCRandomEngineTestRandomNumberServiceAnalyzer PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(IOMCRandomEngineTestRandomNumberServiceAnalyzer PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(IOMCRandomEngineTestRandomNumberServiceAnalyzer PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(IOMCRandomEngineTestRandomNumberServiceAnalyzer PUBLIC ${ROOT_INCLUDE_DIR})
-target_link_libraries(IOMCRandomEngineTestRandomNumberServiceAnalyzer PUBLIC
-  FWCoreParameterSet
-  IOMCRandomEngine
-  FWCoreServiceRegistry
-  FWCoreFramework
-  DataFormatsProvenance
-  ${CLHEP_MAIN_LIBRARY}
-  FWCoreUtilities
-)
-
 add_library(IOMCRandomEngineTestRandomNumberServiceGlobal SHARED 
   TestRandomNumberServiceGlobal.cc
 )
 
-target_include_directories(IOMCRandomEngineTestRandomNumberServiceGlobal PUBLIC ${PYTHON_INCLUDE_DIR})
-include_directories(IOMCRandomEngineTestRandomNumberServiceGlobal PUBLIC ${PYTHON_INCLUDE_DIR})
-target_include_directories(IOMCRandomEngineTestRandomNumberServiceGlobal PUBLIC ${Boost_INCLUDE_DIR}/python)
-include_directories(IOMCRandomEngineTestRandomNumberServiceGlobal PUBLIC ${Boost_INCLUDE_DIR}/python)
-target_include_directories(IOMCRandomEngineTestRandomNumberServiceGlobal PUBLIC ${TINYXML_INCLUDE_DIR})
-include_directories(IOMCRandomEngineTestRandomNumberServiceGlobal PUBLIC ${TINYXML_INCLUDE_DIR})
-target_include_directories(IOMCRandomEngineTestRandomNumberServiceGlobal PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(IOMCRandomEngineTestRandomNumberServiceGlobal PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(IOMCRandomEngineTestRandomNumberServiceGlobal PUBLIC ${MD5_INCLUDE_DIR})
-include_directories(IOMCRandomEngineTestRandomNumberServiceGlobal PUBLIC ${MD5_INCLUDE_DIR})
-target_include_directories(IOMCRandomEngineTestRandomNumberServiceGlobal PUBLIC ${CLHEP_INCLUDE_DIR})
-include_directories(IOMCRandomEngineTestRandomNumberServiceGlobal PUBLIC ${CLHEP_INCLUDE_DIR})
-target_include_directories(IOMCRandomEngineTestRandomNumberServiceGlobal PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(IOMCRandomEngineTestRandomNumberServiceGlobal PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(IOMCRandomEngineTestRandomNumberServiceGlobal PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(IOMCRandomEngineTestRandomNumberServiceGlobal PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(IOMCRandomEngineTestRandomNumberServiceGlobal PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(IOMCRandomEngineTestRandomNumberServiceGlobal PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${CLHEP_INCLUDE_DIR}
+ ${GSL_INCLUDE_DIR}
+ ${MD5_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+ ${XERCESC_INCLUDE_DIR}
+)
 target_link_libraries(IOMCRandomEngineTestRandomNumberServiceGlobal PUBLIC
-  FWCoreParameterSet
-  IOMCRandomEngine
-  FWCoreServiceRegistry
-  FWCoreFramework
-  DataFormatsProvenance
   ${CLHEP_MAIN_LIBRARY}
+  DataFormatsProvenance
+  FWCoreFramework
+  FWCoreParameterSet
+  FWCoreServiceRegistry
   FWCoreUtilities
+  IOMCRandomEngine
 )
 
 add_executable(TestIOMCRandomEngineService
   TestIOMCRandomEngineService.cpp
 )
 
-target_include_directories(TestIOMCRandomEngineService PUBLIC ${PYTHON_INCLUDE_DIR})
-include_directories(TestIOMCRandomEngineService PUBLIC ${PYTHON_INCLUDE_DIR})
-target_include_directories(TestIOMCRandomEngineService PUBLIC ${Boost_INCLUDE_DIR}/python)
-include_directories(TestIOMCRandomEngineService PUBLIC ${Boost_INCLUDE_DIR}/python)
-target_include_directories(TestIOMCRandomEngineService PUBLIC ${TINYXML_INCLUDE_DIR})
-include_directories(TestIOMCRandomEngineService PUBLIC ${TINYXML_INCLUDE_DIR})
-target_include_directories(TestIOMCRandomEngineService PUBLIC ${Boost_INCLUDE_DIR})
-include_directories(TestIOMCRandomEngineService PUBLIC ${Boost_INCLUDE_DIR})
-target_include_directories(TestIOMCRandomEngineService PUBLIC ${MD5_INCLUDE_DIR})
-include_directories(TestIOMCRandomEngineService PUBLIC ${MD5_INCLUDE_DIR})
-target_include_directories(TestIOMCRandomEngineService PUBLIC ${CLHEP_INCLUDE_DIR})
-include_directories(TestIOMCRandomEngineService PUBLIC ${CLHEP_INCLUDE_DIR})
-target_include_directories(TestIOMCRandomEngineService PUBLIC ${TBB_INCLUDE_DIRS})
-include_directories(TestIOMCRandomEngineService PUBLIC ${TBB_INCLUDE_DIRS})
-target_include_directories(TestIOMCRandomEngineService PUBLIC ${ROOT_INCLUDE_DIR})
-include_directories(TestIOMCRandomEngineService PUBLIC ${ROOT_INCLUDE_DIR})
+target_include_directories(TestIOMCRandomEngineService PRIVATE ${CMAKE_SOURCE_DIR})
+target_include_directories(TestIOMCRandomEngineService PUBLIC
+ ${Boost_INCLUDE_DIR}
+ ${Boost_INCLUDE_DIR}/python
+ ${CLHEP_INCLUDE_DIR}
+ ${GSL_INCLUDE_DIR}
+ ${MD5_INCLUDE_DIR}
+ ${PYTHON_INCLUDE_DIR}
+ ${ROOT_INCLUDE_DIR}
+ ${TBB_INCLUDE_DIRS}
+ ${TINYXML2_INCLUDE_DIR}
+ ${UUID_INCLUDE_DIR}
+ ${XERCESC_INCLUDE_DIR}
+)
 target_link_libraries(TestIOMCRandomEngineService PUBLIC
-  FWCoreParameterSet
-  IOMCRandomEngine
-  FWCoreServiceRegistry
-  FWCoreFramework
-  DataFormatsProvenance
   ${CLHEP_MAIN_LIBRARY}
+  DataFormatsProvenance
+  FWCoreFramework
+  FWCoreParameterSet
+  FWCoreServiceRegistry
   FWCoreUtilities
+  IOMCRandomEngine
 )
 
 add_test(NAME TestIOMCRandomEngineService COMMAND TestIOMCRandomEngineService)
